--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
         dataLayer.push(arguments);
       }
     </script>
-    <title>React App</title>
+    <title>Bio Market</title>
     <meta
       name="description"
       content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
